h1. CHANGELOG

h3. 3.1.16 October 30, 2016

* add minitest gem to learn-rails recipe
* no need to precompile assets for Heroku with Rails 5
* I doubt that anyone uses the 'Deploy to Heroku' Button

h3. 3.1.15 October 30, 2016

* no Bootstrap page templates needed for learn-rails recipe (fix)

h3. 3.1.14 October 29, 2016

* remove rails_12factor gem not needed for Rails 5
* make Puma web server default for Rails 5 (not Webrick)
* no Bootstrap page templates needed for learn-rails recipe
* add tests to learn-rails recipe
* create db/schema.rb file for learn-rails recipe

h3. 3.1.13 October 29, 2016

* use bootstrap3 not foundation for learn-rails recipe
* add test helper for learn-rails recipe

h3. 3.1.12 October 29, 2016

* sendgrid gem not needed for mail

h3. 3.1.12 October 29, 2016

* released prematurely

h3. 3.1.10 September 5, 2016

* add Bootstrap 4 option

h3. 3.1.9 August 3, 2016

* remove 'quiet_assets' gem (deprecated for Rails 5.0, see https://github.com/evrone/quiet_assets#deprecation)
* use published 'high_voltage' gem (not from GitHub master)

h3. 3.1.8 May 29, 2016

* remove WEBrick option (Puma is default for Rails 5)
* remove Figaro as an option (closes rails-composer issue #209)
* remove option to create an RVM gemset

h3. 3.1.7 February 29, 2016

* 'learn-rails' application now uses SendGrid not Mandrill

h3. 3.1.6 February 7, 2016

* use 'high_voltage' gem from GitHub master with Rails 5.0
* handle existing README.md file in Rails 5.0

h3. 3.1.5 January 30, 2016

* don't use 'foundation-rails' gem version 6 for Foundation 5
* 'learn-rails' application now uses Mandrill not Gmail

h3. 3.1.4 December 19, 2015

* preliminary support for Rails 5.0.0.beta1

h3. 3.1.3 November 23, 2015

* improve format of file 'config/railscomposer.yml' containing configuration settings

h3. 3.1.2 November 23, 2015

* include gem 'administrate' from the good folks at thoughtbot

h3. 3.1.1 November 6, 2015
