@@ -12,6 +12,7 @@ if prefer :apps4, 'rails-devise'
   prefs[:pages] = 'about+users'
   prefs[:locale] = 'none'
   prefs[:rubocop] = false
+  prefs[:rvmrc] = true
 end
 
 __END__
