@@ -13,6 +13,7 @@ if prefer :apps4, 'rails-omniauth'
   prefs[:pages] = 'about+users'
   prefs[:locale] = 'none'
   prefs[:rubocop] = false
+  prefs[:rvmrc] = true
 end
 
 __END__
