@@ -20,6 +20,7 @@ if prefer :apps4, 'rails-stripe-coupons'
   prefs[:pages] = 'about+users'
   prefs[:locale] = 'none'
   prefs[:rubocop] = false
+  prefs[:rvmrc] = true
 
   # gems
   add_gem 'gibbon'
