@@ -19,6 +19,7 @@ if prefer :apps4, 'rails-stripe-membership-saas'
   prefs[:pages] = 'about+users'
   prefs[:locale] = 'none'
   prefs[:rubocop] = false
+  prefs[:rvmrc] = true
 
   # gems
   add_gem 'gibbon'
